--- a/targets/aarch64-unknown-linux-musl/config
+++ b/targets/aarch64-unknown-linux-musl/config
@@ -7,10 +7,7 @@ CT_ARCH_64=y
 CT_TARGET_VENDOR=""
 CT_KERNEL_LINUX=y
 CT_LINUX_V_5_4=y
-CT_BINUTILS_LINKER_LD_GOLD=y
-CT_BINUTILS_GOLD_THREADS=y
-CT_BINUTILS_LD_WRAPPER=y
 CT_BINUTILS_PLUGINS=y
 CT_LIBC_MUSL=y
 CT_CC_LANG_CXX=y
-CT_GETTEXT_NEEDED=y
+CT_LINKER_MOLD=y
