--- a/targets/arm-unknown-linux-musleabi/config
+++ b/targets/arm-unknown-linux-musleabi/config
@@ -6,10 +6,8 @@ CT_ARCH_ARM=y
 CT_ARCH_FLOAT_SW=y
 CT_KERNEL_LINUX=y
 CT_LINUX_V_5_4=y
-CT_BINUTILS_LINKER_LD_GOLD=y
-CT_BINUTILS_GOLD_THREADS=y
-CT_BINUTILS_LD_WRAPPER=y
 CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_FOR_TARGET=y
 CT_LIBC_MUSL=y
 CT_CC_LANG_CXX=y
+CT_LINKER_MOLD=y
