--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
           - mips-unknown-linux-muslsf
           - mips64el-unknown-linux-musl
           - mips64-unknown-linux-musl
+          - or1k-unknown-linux-musl
           - powerpcle-unknown-linux-musl
           - powerpc-unknown-linux-musl
           - powerpc64le-unknown-linux-musl
